# contextpilot

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  DOCKERHUB_README.md  Dockerfile  LICENSE  README.md  context_pilot_cli.spec  context_pilot_gui.spec  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
scripts/: build_installer.py  generate_skill_stubs.py
scripts/skills/: evcc_skill.py  homeassistant_skill.py  unifi_skill.py
src/connectors/: base.py  bitwarden.py  bookmarks.py  dockge.py  email_imap.py  excel.py  gdrive.py  gitea.py  github.py  homeassistant.py  keepass.py  kubernetes.py  notion.py  obsidian.py  paperless.py  registry.py  rss.py  teams.py  telegram.py
src/core/: analytics.py  assembler.py  backup.py  block.py  claude_config.py  clustering.py  compress_detect.py  context.py  dependency_detector.py  duplicates.py  embeddings.py  events.py  log.py  mcp_client.py  relevance.py  scheduler.py  secrets.py  simulator.py  skill_assembler.py  skill_connector.py  skill_graph.py  skill_registry.py  token_budget.py  webhooks.py  weight_adjuster.py
src/core/compressors/: __init__.py  base.py  bullet_extract.py  code_compact.py  dedup_cross.py  mermaid.py  table.py  yaml_struct.py
src/core/skills/: __init__.py  evcc.py  homeassistant.py  unifi.py
src/gui/: __init__.py  __main__.py  block_editor.py  main_window.py  memory_diff_dialog.py  memory_editor.py  sidebar.py  skill_editor.py  skill_monitor.py  style.py
src/gui/pages/: __init__.py  assemble.py  dashboard.py  knowledge_graph.py  servers.py
src/gui/widgets/: __init__.py  block_card.py  budget_bar.py  simulation_panel.py
src/importers/: __init__.py  claude.py  copilot.py  sqlite.py
src/interfaces/: cli.py  mcp_server.py
src/storage/: __init__.py  db.py  folders.py  memory.py  memory_activity.py  profiles.py  project.py  relations.py  settings.py  templates.py  usage.py  versions.py
src/web/: __main__.py  app.py  deps.py  rate_limit.py
src/web/routers/: analytics.py  assembly.py  connectors.py  events.py  folders.py  graph.py  import_routes.py  memories.py  profiles.py  projects.py  system.py
src/web/static/: app.js  manifest.json  style.css
src/web/templates/: index.html
tests/: conftest.py  test_analytics.py  test_api_versioning.py  test_assembler.py  test_async_endpoints.py  test_auto_capture.py  test_auto_context.py  test_backup.py  test_backup_enhanced.py  test_base_permissions.py  test_block.py  test_claude_config.py  test_cli.py  test_clustering.py  test_compress_detect.py  test_compressors.py  test_connector_base.py  test_connector_gitea.py  test_connector_github.py  test_connector_ha.py  test_connector_notion.py  test_connector_obsidian.py  test_connector_rss.py  test_connector_sync.py  test_connector_telegram.py  test_connectors_new.py  test_context.py  test_db.py  test_dependency_detector.py  test_deps.py  test_duplicates.py  test_email_credential_leak.py  test_embeddings_index.py  test_embeddings_profile.py  test_embeddings_unit.py  test_events.py  test_events_extended.py  test_folders.py  test_gui_widgets.py  test_health.py  (+54 more)
