[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-pilot"
version = "4.3.0"
description = "Smart context and memory management for AI models — Web App + MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Constantin Mathe"},
]
keywords = ["ai", "context", "memory", "mcp", "llm", "assembler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiktoken>=0.8.0",
    "click>=8.3.0",
    "mcp>=1.27.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "pydantic>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/applehell/contextpilot"
Repository = "https://github.com/applehell/contextpilot"
Issues = "https://github.com/applehell/contextpilot/issues"

[project.scripts]
context-pilot = "src.interfaces.cli:cli"
context-pilot-web = "src.web.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.28.0",
    "debugpy>=1.8.0",
    "autoflake>=2.3.0",
    "pyflakes>=3.4.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
